aks/all-in-one.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost-app
  template:
    metadata:
      labels:
        app: ghost-app
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: ghost-app
        image: ghost:4.37.0-alpine
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
        ports:
        - containerPort: 2368
          name: ghost-app
        volumeMounts:
        - name: azure-managed-disk
          mountPath: /var/lib/ghost/content/
      volumes:
      - name: azure-managed-disk
        persistentVolumeClaim:
          claimName: azure-managed-disk
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-app
spec:
  type: LoadBalancer
  selector:
    app: ghost-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
