aks/service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: ghost-app
spec:
  type: LoadBalancer
  selector:
    app: ghost-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
