aks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ghost-app
spec:
  selector:
    app: ghost-app
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 2368
